For CMKE-351: Fix lineheight to align with Title

--- a/src/styles.css
+++ b/src/styles.css
@@ -73,6 +73,7 @@ b {
 .view-site {
   font-size: .875em;
   float: right;
+  line-height: 2.3;
 }
 
 .block {
